--- a/src/index.css
+++ b/src/index.css
@@ -6,18 +6,24 @@ body {
   background: #6fa3d9 url('/bg_2.png') repeat-x;
 }
 
-/*Scrollbar styling*/
-::-webkit-scrollbar
-{
-  width: 8px;  /* for vertical scrollbars */
-  height: 8px; /* for horizontal scrollbars */
+button:focus {
+  outline: 0;
 }
-::-webkit-scrollbar-track
-{
+
+
+/*Scrollbar styling*/
+
+::-webkit-scrollbar {
+  width: 8px;
+  /* for vertical scrollbars */
+  height: 8px;
+  /* for horizontal scrollbars */
+}
+
+::-webkit-scrollbar-track {
   background: rgba(0, 0, 0, 0.1);
 }
 
-::-webkit-scrollbar-thumb
-{
+::-webkit-scrollbar-thumb {
   background: rgba(0, 0, 0, 0.5);
 }
